--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,6 @@
-<footer>
-  <span>Писать внутри свою разметку секции БАЗОВУЮ РАЗМЕТКУ ДЕЛАТЬ НЕ НАДО!</span>
+<footer class="footer container">
+  <div class="END">
+    <div id="line"></div>
+    <p id="Template">&copy; 2020 GoIteens Template. All Rights Reserved</p>
+</div>
 </footer>
