--- a/src/html/section6.html
+++ b/src/html/section6.html
@@ -1,3 +1,32 @@
-<section>
-  <span>Писать внутри свою разметку секции БАЗОВУЮ РАЗМЕТКУ ДЕЛАТЬ НЕ НАДО!</span>
+<div class="section6_wrapper">
+<section class="section6 container">
+  <p id="ConUs">Contact us</p>
+
+  <div class="LeftSide">
+      <div class="Touch">
+          <p id="top">Get in touch with us</p>
+          <p id="low">Free calls all around the world.</p>
+      </div>
+
+      <div class="photos">
+          <img id="photo" src="./Images/Facebook.png" alt="Facebook">
+          <img id="photo" src="./Images/Twitter.png" alt="Twitter">
+          <img id="photo" src="./Images/LinkedIn.png" alt="LinkedIn">
+      </div>
+
+      <div class="NumberEmail">
+          <p id="Contacts">+380-...-..-..</p>
+          <p id="Contacts">goiteens@gmail.com</p>
+      </div>
+  </div>
+
+  <!-- <div class="rightside"> -->
+      <form class="s6_form" action="#" method="GET">
+          <input class="s6_input" type="text" placeholder="Name">
+          <input class="s6_input" type="email" placeholder="E-Mail">
+          <textarea class="s6_ta" type="text" rows="5" cols="5" placeholder="Message"> </textarea>
+      </form>
+        <button class="s6_btn">SUBMIT</button>
+      <!-- </div> -->
 </section>
+</div>
