--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,6 +1,7 @@
-<footer class="footer container">
-  <div class="END">
-    <div id="line"></div>
-    <p id="Template">&copy; 2020 GoIteens Template. All Rights Reserved</p>
+<div class="footer_wrapper">
+ <footer class="footer container">
+    <div id="footer_line"></div>
+    <p id="footer_template1">&copy; 2020 GoIteens Template.</p>
+    <p id="footer_template2">All Rights Reserved</p>
+ </footer>
 </div>
-</footer>
