section 1 in progress

--- a/src/html/section5.html
+++ b/src/html/section5.html
@@ -1,3 +1,45 @@
-<section>
-  <span>Писать внутри свою разметку секции БАЗОВУЮ РАЗМЕТКУ ДЕЛАТЬ НЕ НАДО!</span>
-</section>
+<!-- <section class="section5 container">
+  <h2 class="s5_title">what our customers say</h2>
+  <div class="slider">
+    <ul class="slider__wrapper">
+      <li class="slider__item">
+        <div class="s5_item">
+          <img src="../../src/images/263.jpg" alt="img1" width="100" height="50">
+          <h3>Name</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consectetur illum id dolorum commodi
+            iusto alias vero ipsa, aliquam repellat officia mollitia voluptate rem repellendus voluptates, minima qui
+            vel magni.</p>
+        </div>
+      </li>
+      <li class="slider__item">
+        <div class="s5_item">
+          <img src="../../src/images/263.jpg" alt="img1" width="100" height="50">
+          <h3>Name</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consectetur illum id dolorum commodi
+            iusto alias vero ipsa, aliquam repellat officia mollitia voluptate rem repellendus voluptates, minima qui
+            vel magni.</p>
+        </div>
+      </li>
+      <li class="slider__item">
+        <div class="s5_item">
+          <img src="../../src/images/263.jpg" alt="img1" width="100" height="50">
+          <h3>Name</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consectetur illum id dolorum commodi
+            iusto alias vero ipsa, aliquam repellat officia mollitia voluptate rem repellendus voluptates, minima qui
+            vel magni.</p>
+        </div>
+      </li>
+      <li class="slider__item">
+        <div class="s5_item">
+          <img src="../../src/images/263.jpg" alt="img1" width="100" height="50">
+          <h3>Name</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consectetur illum id dolorum commodi
+            iusto alias vero ipsa, aliquam repellat officia mollitia voluptate rem repellendus voluptates, minima qui
+            vel magni.</p>
+        </div>
+      </li>
+    </ul>
+    <a class="slider__control slider__control_left" href="#" role="button"></a>
+    <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+  </div>
+</section> -->
