--- a/src/html/section6.html
+++ b/src/html/section6.html
@@ -1,4 +1,4 @@
-<div class="section6_wrapper">
+<!-- <div class="section6_wrapper">
 <section class="section6 container">
   <p id="ConUs">Contact us</p>
 
@@ -21,12 +21,12 @@
   </div>
 
   <!-- <div class="rightside"> -->
-      <form class="s6_form" action="#" method="GET">
-          <input class="s6_input" type="text" placeholder="Name">
-          <input class="s6_input" type="email" placeholder="E-Mail">
-          <textarea class="s6_ta" type="text" rows="5" cols="5" placeholder="Message"> </textarea>
-      </form>
-        <button class="s6_btn">SUBMIT</button>
-      <!-- </div> -->
+<form class="s6_form" action="#" method="GET">
+  <input class="s6_input" type="text" placeholder="Name">
+  <input class="s6_input" type="email" placeholder="E-Mail">
+  <textarea class="s6_ta" type="text" rows="5" cols="5" placeholder="Message"> </textarea>
+</form>
+<button class="s6_btn">SUBMIT</button>
+<!-- </div> -->
 </section>
-</div>
+</div> -->
