--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="FE-4" />
+  <meta name="keywords" content="goit, IT-school, deveducation /">
+  <meta name="description" content="курсы Frontend" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>LFT by VJ</title>
-  <link rel="stylesheet" href="./css/styles.min.css" />
+  <link rel="stylesheet" href="../build/css/styles.css" />
+  <title>BETTA</title>
 </head>
 
 <body>
@@ -24,7 +27,7 @@
   <!-- Никита Кот -->
   //= ./html/section6.html
   //= ./html/footer.html
-  <!-- <script src="js/index.js"></script> -->
+  <script src="../build/js/scripts.js"></script>
 </body>
 
 </html>
