--- a/src/html/section1.html
+++ b/src/html/section1.html
@@ -1,6 +1,19 @@
-<div class="section1_wrapper">
-  <section class="section1 container">
-    <h2>intoducing...</h2>
+<div class="s1_wrapper">
 
+  <section class="section1 container">
+    <h2 class="section1_title">Introducing Mobileapp</h2>
+    <p class="section1_text">Maecenas vitae tellus sapien. Praesent</p>
+    <ul class="s1_list">
+      <li class="s1_item">semper scelerisque tristique a enim</li>
+      <li class="s1_item">Integer ut mattis nulla, eget vehicula elit</li>
+      <li class="s1_item">Praesent rutrum ac nunc et</li>
+    </ul>
+    <div class="section1_img">
+      <img src="../../src/images/Latest_(23).png" alt="gg">
+    </div>
+    <a class="s1_btn" target="blink"
+      href="https://aleksandrahrevtsova.github.io/FE_7_Mobile_App_Project/build/index.html">download</a>
+    <!-- <button class="s1_btn">Download</button> -->
   </section>
+
 </div>
