fixes all section before students

--- a/src/html/section1.html
+++ b/src/html/section1.html
@@ -1,5 +1,4 @@
 <div class="s1_wrapper">
-
   <section class="section1 container">
     <h2 class="section1_title">Introducing Mobileapp</h2>
     <p class="section1_text">Maecenas vitae tellus sapien. Praesent</p>
@@ -9,11 +8,8 @@
       <li class="s1_item">Praesent rutrum ac nunc et</li>
     </ul>
     <div class="section1_img">
-      <img src="../../src/images/Latest_(23).png" alt="gg">
+      <img src="./images/" alt="gg" />
     </div>
-    <a class="s1_btn" target="blink"
-      href="https://aleksandrahrevtsova.github.io/FE_7_Mobile_App_Project/build/index.html">download</a>
-    <!-- <button class="s1_btn">Download</button> -->
+    <a class="s1_btn" target="blink" href="#">download</a>
   </section>
-
 </div>
