--- a/src/html/section3.html
+++ b/src/html/section3.html
@@ -1,3 +1,25 @@
-<section>
-  <span>Писать внутри свою разметку секции БАЗОВУЮ РАЗМЕТКУ ДЕЛАТЬ НЕ НАДО!</span>
-</section>
+<div class="section_wrapper">
+  <section class="section-3 container">
+    <h2 class="section-3_title">watch the video</h2>
+    <p class="section-3_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab deleniti,
+      eveniet aperiam sint soluta
+      possimus vero officiis adipisci impedit commodi explicabo omnis optio expedita ad totam ex fuga!
+      Asperiores?
+    </p>
+    <div class="support">
+      <div class="circle">
+        <div class="ico">
+          <img src="./images/apple1.png" alt="apple icon" width="30" height="30">
+        </div>
+      </div>
+      <div class="circle">
+        <div class="ico">
+          <img src="./images/android.png" alt="android icon" width="30" height="30">
+        </div>
+      </div>
+
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3kRlvrtdS0c" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </section>
+</div>
