--- a/src/html/section2.html
+++ b/src/html/section2.html
@@ -1,3 +1,65 @@
-<section>
-  <span>Писать внутри свою разметку секции БАЗОВУЮ РАЗМЕТКУ ДЕЛАТЬ НЕ НАДО!</span>
+<section class="section-2 container">
+  <h2 class="section-2_title">key features</h2>
+  <p class="section_content">Lorem ipsum dolor,
+    sit amet consectetur adipisicing elit. Quasi id perferendis,
+    labore molestiae amet adipisci velit debitis,
+    unde excepturi modi incidunt nemo,
+    sapiente possimus fuga eligendi ipsam nobis saepe ! Quisquam.</p>
+  <ul class="s2_list">
+    <li class="item"><img src="./images/" alt="icon1" width="30px" height="30px">
+      <div class="item_text">
+        <h3>Amet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
+          Corrupti iusto voluptas,
+          ipsa dolor saepe tenetur,
+          nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
+      </div>
+    </li>
+    <li class="item"><img src="./images/" alt="icon2" width="30px" height="30px">
+      <div class="item_text">
+        <h3>Amet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
+          Corrupti iusto voluptas,
+          ipsa dolor saepe tenetur,
+          nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
+      </div>
+    </li>
+    <li class="item"><img src="./images/" alt="icon3" width="30px" height="30px">
+      <div class="item_text">
+        <h3>Amet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
+          Corrupti iusto voluptas,
+          ipsa dolor saepe tenetur,
+          nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
+      </div>
+    </li>
+    <li class="item"><img src="./images/" alt="icon4" width="30px" height="30px">
+      <div class="item_text">
+        <h3>Amet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
+          Corrupti iusto voluptas,
+          ipsa dolor saepe tenetur,
+          nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
+      </div>
+    </li>
+    <li class="item"><img src="./images/" alt="icon5" width="30px" height="30px">
+      <div class="item_text">
+        <h3>Amet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
+          Corrupti iusto voluptas,
+          ipsa dolor saepe tenetur,
+          nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
+      </div>
+    </li>
+    <li class="item"><img src="./images/" alt="icon6" width="30px" height="30px">
+      <div class="item_text">
+        <h3>Amet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
+          Corrupti iusto voluptas,
+          ipsa dolor saepe tenetur,
+          nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
+      </div>
+    </li>
+    <li class="item"><img src="#"></li>
+  </ul>
 </section>
