--- a/src/html/section6.html
+++ b/src/html/section6.html
@@ -1,32 +1,35 @@
-<!-- <div class="section6_wrapper">
-<section class="section6 container">
-  <p id="ConUs">Contact us</p>
+<div class="section6_wrapper">
+  <section class="section6 container">
+    <h3 id="ConUs">Contact us</h3>
 
-  <div class="LeftSide">
+    <!-- <div class="rightside"> -->
+    <form class="s6_form" action="#" method="GET">
+      <input class="s6_input" type="text" placeholder="Name">
+      <input class="s6_input" type="email" placeholder="E-Mail">
+      <textarea class="s6_ta" type="text" rows="5" cols="5" placeholder="Message"></textarea>
+    </form>
+    <button class="s6_btn">SUBMIT</button>
+    <!-- </div> -->
+
+    <div class="LeftSide">
       <div class="Touch">
-          <p id="top">Get in touch with us</p>
-          <p id="low">Free calls all around the world.</p>
+        <h2 id="s6_top">Get in touch with us</h2>
+        <p id="s6_low">Free calls all around the world</p>
+      </div>
+      <!-- че тут такая сложная конструкция? див в диве и дивом погоняет, в итоге тут должен
+быть один див с тремя ашками (ссылками), внутри которых img с иконками .png позиуионирование на флексах-->
+      <div class="s6_photos">
+        <div class="s6_img1"><img id="s6_photo1" src="./images/facebook.png" alt="Facebook" width="30" height="30">
+        </div>
+        <div class="s6_img2"><img id="s6_photo2" src="./images/twitter.png" alt="Twitter" width="30" height="30"></div>
+        <div class="s6_img3"><img id="s6_photo3" src="./images/linkedin.png" alt="LinkedIn" width="30" height="30">
+        </div>
       </div>
 
-      <div class="photos">
-          <img id="photo" src="./Images/Facebook.png" alt="Facebook">
-          <img id="photo" src="./Images/Twitter.png" alt="Twitter">
-          <img id="photo" src="./Images/LinkedIn.png" alt="LinkedIn">
+      <div class="s6_NumberEmail">
+        <p id="Contacts">+380 067 326 95 92</p>
+        <p id="Contacts">goiteens@gmail.com</p>
       </div>
-
-      <div class="NumberEmail">
-          <p id="Contacts">+380-...-..-..</p>
-          <p id="Contacts">goiteens@gmail.com</p>
-      </div>
-  </div>
-
-  <!-- <div class="rightside"> -->
-<form class="s6_form" action="#" method="GET">
-  <input class="s6_input" type="text" placeholder="Name">
-  <input class="s6_input" type="email" placeholder="E-Mail">
-  <textarea class="s6_ta" type="text" rows="5" cols="5" placeholder="Message"> </textarea>
-</form>
-<button class="s6_btn">SUBMIT</button>
-<!-- </div> -->
-</section>
-</div> -->
+    </div>
+  </section>
+</div>
