--- a/src/html/section2.html
+++ b/src/html/section2.html
@@ -6,7 +6,7 @@
     unde excepturi modi incidunt nemo,
     sapiente possimus fuga eligendi ipsam nobis saepe ! Quisquam.</p>
   <ul class="s2_list">
-    <li class="item"><img src="./images/" alt="icon1" width="30px" height="30px">
+    <li class="s2_item"><img src="./images/gitbash.png" alt="icon1" width="30px" height="30px">
       <div class="item_text">
         <h3>Amet</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
@@ -15,7 +15,7 @@
           nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
       </div>
     </li>
-    <li class="item"><img src="./images/" alt="icon2" width="30px" height="30px">
+    <li class="s2_item"><img src="./images/github.png" alt="icon2" width="30px" height="30px">
       <div class="item_text">
         <h3>Amet</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
@@ -24,7 +24,7 @@
           nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
       </div>
     </li>
-    <li class="item"><img src="./images/" alt="icon3" width="30px" height="30px">
+    <li class="s2_item"><img src="./images/node.png" alt="icon3" width="30px" height="30px">
       <div class="item_text">
         <h3>Amet</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
@@ -33,7 +33,7 @@
           nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
       </div>
     </li>
-    <li class="item"><img src="./images/" alt="icon4" width="30px" height="30px">
+    <li class="s2_item"><img src="./images/vscode.png" alt="icon4" width="30px" height="30px">
       <div class="item_text">
         <h3>Amet</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
@@ -42,7 +42,7 @@
           nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
       </div>
     </li>
-    <li class="item"><img src="./images/" alt="icon5" width="30px" height="30px">
+    <li class="s2_item"><img src="./images/chrome.png" alt="icon5" width="30px" height="30px">
       <div class="item_text">
         <h3>Amet</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
@@ -51,7 +51,7 @@
           nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
       </div>
     </li>
-    <li class="item"><img src="./images/" alt="icon6" width="30px" height="30px">
+    <li class="s2_item"><img src="./images/gmail.png" alt="icon6" width="30px" height="30px">
       <div class="item_text">
         <h3>Amet</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum impedit quisquam assumenda suscipit.
@@ -60,6 +60,6 @@
           nesciunt doloribus architecto quidem maxime vitae repudiandae esse amet?</p>
       </div>
     </li>
-    <li class="item"><img src="#"></li>
+    <li class="s2_item"><img src="./images/smile.png" width="150" height="150"></li>
   </ul>
 </section>
