--- a/src/html/section5.html
+++ b/src/html/section5.html
@@ -4,7 +4,7 @@
     <ul class="slider__wrapper">
       <li class="slider__item">
         <div class="s5_item">
-          <img src="./images/" alt="img1" width="100" height="100">
+          <img src="./images/steve_jobs.jpg" alt="img1" width="100" height="100">
           <h3>Joe</h3>
           <p>There may be indications of vendor chaos in the first meeting. They should be capturing goals and
             requirements in an organized way.</p>
@@ -12,7 +12,7 @@
       </li>
       <li class="slider__item">
         <div class="s5_item">
-          <img src="./images/" alt="img1" width="100" height="100">
+          <img src="./images/ilon_musk.jpg" alt="img1" width="100" height="100">
           <h3>John</h3>
           <p>Get a Demo. Of course, you’ll want a demo of the content management system, but also get a demo of the
             project management tools. Wait, they don’t use project management tools? Bad sign…</p>
@@ -20,7 +20,7 @@
       </li>
       <li class="slider__item">
         <div class="s5_item">
-          <img src="./images/" alt="img1" width="100" height="100">
+          <img src="./images/bill_gates.jpg" alt="img1" width="100" height="100">
           <h3>Nick</h3>
           <p>Just pick up the phone and call some people! As with job candidates, the best indication of future
             performance is past performance. Have a genuine conversation with companies the vendor has worked with. Or
@@ -29,7 +29,7 @@
       </li>
       <li class="slider__item">
         <div class="s5_item">
-          <img src="./images/" alt="img1" width="100" height="100">
+          <img src="./images/mark_zuckerberg.jpg" alt="img1" width="100" height="100">
           <h3>Piter</h3>
           <p>Read Reviews, but don’t stop there. Search around for a few minutes. Go to the Better Business Bureau
             website and see if there are any complaints.</p>
